[gd_scene load_steps=12 format=2]

[ext_resource path="res://components/health_upgrader/HealthUpgrader.gd" type="Script" id=1]
[ext_resource path="res://components/requirements_overlay/RequirementsOverlay.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/upgraders/last_outpost_upgrade_life_active2.png" type="Texture" id=3]
[ext_resource path="res://assets/upgraders/last_outpost_upgrade_life_2.png" type="Texture" id=4]
[ext_resource path="res://assets/light/light.png" type="Texture" id=5]
[ext_resource path="res://assets/last_outpost_camp_background_groe√üe.png" type="Texture" id=6]
[ext_resource path="res://components/health_upgrader/last_outpost_sound_upgrade_life.wav" type="AudioStream" id=7]

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( -40, -4, -45, -17, -41, -30, -34, -36, -30, -37, -31, -43, -33, -48, -32, -52, -25, -57, 0, -60, 23, -57, 30, -55, 33, -51, 30, -43, 29, -39, 37, -35, 44, -25, 46, -16, 44, -9, 37, 2, 40, 5, 42, 7, 42, 11, 39, 13, 34, 13, 25, 11, 22, 10, 14, 13, 5, 14, -7, 14, -16, 12, -23, 9, -38, 12, -41, 8, -41, 5, -36, 2 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "active",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.5, 29.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 50.5, 24.5 )

[node name="HealthUpgrader" type="StaticBody2D"]
collision_layer = 3
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -2.0

[node name="TheLastOutpostBackgroundSkalierung" type="Sprite" parent="."]
visible = false
position = Vector2( 202, -145 )
texture = ExtResource( 6 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
light_mask = 16384
position = Vector2( 0.367234, -74.1203 )
scale = Vector2( 0.295394, 0.295394 )
frames = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -43.5, -15.5 )
shape = SubResource( 1 )

[node name="RequirementsOverlay" parent="." instance=ExtResource( 2 )]
position = Vector2( -32, -248 )

[node name="SelfLight" type="Light2D" parent="."]
light_mask = 16384
texture = ExtResource( 5 )
energy = 0.8
range_item_cull_mask = 16384
shadow_item_cull_mask = 16384

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -5.5, -9.5 )
shape = SubResource( 4 )
